# oraculo

./: .gitignore  README.md  pyproject.toml
oraculo/: cli.py
oraculo/functions/: audio.py  config.py  data.py  text.py
oraculo/webapp/: hello_world.py  search.py
tests/: test_dataset.py  tests.py
