[tool.poetry]
name = "oraculo"
version = "0.1.0"
description = "A project to use Sentence Transformers and embeddings to make a pockt search engine"
authors = ["Joao Tedeschi <joaorafaelbt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
